--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,9 @@
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
+
+    <!-- exp -->
+    <string name="exp_1">Disney</string>
+    <string name="exp_2">Oil Painting</string>
+    <string name="exp_3">Famous Oil Painting</string>
 </resources>
